# django-shortuuid

./: README.md  pyproject.toml
.github/workflows/: release.yml
django_example/app/: admin.py  models.py
django_example/config/: settings.py  wsgi.py
django_example/django_example/: asgi.py  settings.py  urls.py  wsgi.py
src/django_shortuuid/: __init__.py  fields.py
