[project]
name = "django-shortuuid"
version = "0.1.0"
description = "A modern, Django model field for generating short, unique, URL-safe UUIDs using the shortuuid lib."
readme = "README.md"
authors = [{ name = "stabldev", email = "thestabldev@gmail.com" }]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.20,<0.9.0"]
build-backend = "uv_build"
