[project]
name = "django-shortuuid"
version = "0.1.1"
description = "A modern, Django model field for generating short, unique, URL-safe UUIDs using the shortuuid lib."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "stabldev", email = "thestabldev@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.6",
    "shortuuid>=1.0.13",
]
keywords = ["django", "shortuuid", "uuid", "field", "model", "unique-id"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
homepage = "https://github.com/stabldev/django-shortuuid"
repository = "https://github.com/stabldev/django-shortuuid"
bug-tracker = "https://github.com/stabldev/django-shortuuid/issues"
documentation = "https://github.com/stabldev/django-shortuuid#readme"

[build-system]
requires = ["uv_build>=0.8.20,<0.9.0"]
build-backend = "uv_build"

[tool.pyright]
reportMissingTypeStubs = "none"
reportAny = "none"
reportExplicitAny = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
